--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
               <p class="nav-text"><a class="nav-link" href="index.html">HOME</a></p>
             </li>
             <li class="nav-item mx-2">
-              <p class="nav-text"><a class="nav-link " href="index.html">ABOUT</a></p>
+              <p class="nav-text"><a class="nav-link " href="#about">ABOUT</a></p>
             </li>
             <li class="nav-item mx-2">
-              <p class="nav-text"><a class="nav-link" href="index.html">SERVICES</a></p>
+              <p class="nav-text"><a class="nav-link" href="#services">SERVICES</a></p>
             </li>
             <li class="nav-item mx-2">
               <p class="nav-text"><a class="nav-link" href="#contact">CONTACT</a></p>
