--- a/singin.html
+++ b/singin.html
@@ -44,10 +44,10 @@
                 <p class="nav-text"><a class="nav-link" href="index.html">HOME</a></p>
               </li>
               <li class="nav-item mx-2">
-                <p class="nav-text"><a class="nav-link " href="#about">ABOUT</a></p>
+                <p class="nav-text"><a class="nav-link " href="index.html">ABOUT</a></p>
               </li>
               <li class="nav-item mx-2">
-                <p class="nav-text"><a class="nav-link" href="#services">SERVICES</a></p>
+                <p class="nav-text"><a class="nav-link" href="index.html">SERVICES</a></p>
               </li>
               <li class="nav-item mx-2">
                 <p class="nav-text"><a class="nav-link" href="#contact">CONTACT</a></p>
