--- a/hotel.html
+++ b/hotel.html
@@ -236,7 +236,7 @@
 
             <div class="row my-3 h-background">
                 <div class="col-md-4">
-                    <a href="payment4.html"><img class="img-fluid" src="https://wallpapers.net/maldives-hotel-room-hd-wallpaper/download/3840x2160.jpg" alt="hotel"></a>
+                    <a href="payment4.html"><img class="img-fluid" src="https://wallpapercave.com/wp/wp6957342.jpg" alt="hotel"></a>
                 </div>
                 <div class="col-md-4">
                     <h4 class="h-header">Daryl Economy</h4>
