--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         <div class="col-md-6 col-lg-5 mx-2 my-5 mt-5 villa-text ">
           <h3 class="text-center  my-3">Villa</h3>
           <p class="text-center">
-            Our bungalows at Daryl Hotel are the perfect place to relax and unwind.</p>
-            <p class="text-center">They are located in a quiet area of the hotel, away from the hustle and bustle of the main building.</p>
-            <p class="text-center">The bungalows are surrounded by lush greenery and offer stunning views of the surrounding mountains.</p>
+            Nestled amidst the lush, tropical surroundings of our exquisite hotel, the villa stands as a secluded haven of luxury and tranquility.</p>
+            <p class="text-center">The moment you step into this idyllic retreat, you'll be captivated by the harmonious blend of modern comfort and natural beauty.</p>
+           
           
         </div>
 
